feat(#48): add product(s) endpoints
